# Loop-Saboteur

./: .gitignore  CMakeLists.txt  JUCE  README.md
.github/workflows/: linux.yml  windows.yml
Resources/: LoopSaboteur.entitlements
Resources/pkg/: Distribution.xml  welcome.txt
Source/: FontHelper.h  OutputStage.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SettingsPage.h
docs/: MANUAL.md
